"Please select" text for skills

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
               <br><br><br><br><br>
     <h1 class="skills-head">Skills</h1>
     <hr>
+    <p class="selection">Please Select:</p>
     <div class="button">
       <button type="button" onclick="hiddenDiv('programming language');" id="skills_submit">Programming Language</button>
       <button type="button" onclick="hiddenDiv('development methodology');" id="skills_submit">Development Methodology</button>
