--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- Author: Nikki Moteva
-     Date Published: April 27, 2020-->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -39,22 +36,22 @@
     <nav class="navbar navbar-fixed-top" role="navigation">
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-            <a class="navbar-brand page-scroll" href="#page-top" style="margin-left: 50px; color: rgba(238, 238, 238, 0.938); font-weight: bold">Nikki Moteva</a>
+            <a class="navbar-brand page-scroll" href="#page-top" style="margin-left: 50px; color: rgba(238, 238, 238, 0.938); font-weight: bold; font-size: 25px;">Nikki Moteva</a>
             <li class="hidden"> <a class="page-scroll" href="#page-top"></a> </li>
-            <li> <a style="margin-left: 450px;" class="page-scroll" href="#about">About</a> </li>
+            <li> <a style="margin-left: 200px;" class="page-scroll" href="#about">About</a> </li>
             <li> <a class="page-scroll" href="#skills">Skills</a> </li>
             <li> <a class="page-scroll" href="#experience">Experience</a> </li>
             <li> <a class="page-scroll" href="#projects">Projects</a> </li>
             <li> <a class="page-scroll" href="#contact">Contact</a> </li>
             <li> <a class="ps_resume" href="https://docs.google.com/document/d/10elEFjPsAf7iL1-FJv7k_i2iTy31pTRTTXpZeS1TMA4/edit?usp=sharing">Resume</a> </li>
             <li>
-              <a style="margin-left: 420px;" href="https://github.com/nikkimoteva">
-                <img src="../Personal/images/github.png" alt="github-link" style="margin-top: -18px; margin-bottom: -20px; width:75px; height:65px;">
+              <a style="margin-top: 0vh; margin-bottom: -20px; height: 50px;" href="https://github.com/nikkimoteva">
+                <img src="../Personal/images/github.png" alt="github-link" style="margin-top: -2.75vh; margin-bottom: -20px; width:65px; height:58px;">
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/nikki-motevaselolhagh-84130a18a/">
-                <img src="../Personal/images/li.png" alt="linkedin-link" style="margin-top: -10px; margin-bottom: -15px; width:60px; height:52px;">
+              <a style="margin-top: .25vh; margin-bottom: -20px; margin-left: 0vh; height: 50px; width: 90px;" href="https://www.linkedin.com/in/nikki-motevaselolhagh-84130a18a/">
+                <img src="../Personal/images/li.png" alt="linkedin-link" style="margin-left: .5vh; margin-top: -3vh; margin-bottom: -20px; width:52px; height:44px;">
               </a>
             </li>
         </ul>
@@ -65,10 +62,10 @@
   <section id="intro" class="intro-section">
       <div class="container">
           <div class="row">
-                <h1 class="animate_welcome" style="margin-top:75px; color:slategrey">Welcome To</h2>
-                <h1 class="animate_name" style="margin-top:75px;">Nikki Moteva</h1>
-                <h1 class="animate_s" style="margin-top: 75px;">'s</h1>
-                <h1 class="animate_website" style="margin-top:75px; color:slategrey">Personal Portfolio</h1>
+                <h1 class="animate_welcome" style="margin-top:-12vh; color:slategrey">Welcome To</h2>
+                <h1 class="animate_name" style="margin-top:10vh;">Nikki Moteva</h1>
+                <h1 class="animate_s" style="margin-top: 10vh;">'s</h1>
+                <h1 class="animate_website" style="margin-top:10vh; color:slategrey">Personal Portfolio</h1>
 
                 <div id="hidden_intro" style="margin-top: -220px; display: none;">
                   <br><hr><br>
@@ -119,8 +116,8 @@
               <br><br><br><br><br>
     <h1 class="skills-head">Skills</h1>
     <hr>
-    <p class="selection">Please Select:</p>
-    <div class="button">
+      <p class="selection">Please Select:</p>
+      <div class="button">
       <button type="button" onclick="hiddenDiv('programming language');" id="skills_submit">Programming Language</button>
       <button type="button" onclick="hiddenDiv('development methodology');" id="skills_submit">Development Methodology</button>
       <button type="button" onclick="hiddenDiv('ide');" id="skills_submit">Software</button>
@@ -159,7 +156,7 @@
       <div class="dm">
       <img src="../Personal/images/agile_logo3.png" alt="Agile Logo" style=" width:175px; height:194px;">
       <img src="../Personal/images/waterfall_logo.png" alt="Waterfall Logo" style=" width:165px; height:175px; margin-left: 300px;">
-      <br><br><br><br><br><br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
     </div>
     <div class="IDE" id="hidden_div3"  style="display:none;">
